[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/CoinPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/Menu.gd" type="Script" id=2]
[ext_resource path="res://fonts/PixelOperator.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sound/click.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CoinPanel" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -67.5
margin_right = 20.0
margin_bottom = 67.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -55.0
margin_right = 55.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Button" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -15.0
margin_right = 55.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 2 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -30.0
margin_right = 55.0
custom_fonts/font = SubResource( 2 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.217
anchor_right = 0.5
anchor_bottom = 0.217
margin_left = -110.0
margin_top = -12.2
margin_right = -21.0
margin_bottom = 1.79999
rect_scale = Vector2( 2.5, 2.5 )
custom_fonts/font = SubResource( 1 )
text = "Kotak Geming"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="CanvasLayer/Control/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Buy" to="." method="_on_Buy_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Exit" to="." method="_on_Exit_pressed"]
